# test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/actions/setup-aliyun/: action.yml
.github/scripts/: sae-update-and-exec-job.sh
.github/workflows/: deploy-aluyun-production.yml  pr-check.yml  release.yml
app/: asgi.py  celery.py  urls.py  wsgi.py
app/settings/: aliyun.py  base.py  local.py
app/storage/: aliyun.py
core/: tasks.py  urls.py  views.py
